forwhile/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> opt_newlines statements
Rule 2     program -> opt_newlines
Rule 3     opt_newlines -> opt_newlines NEWLINE
Rule 4     opt_newlines -> <empty>
Rule 5     statements -> statements statement_with_newline
Rule 6     statements -> statement_with_newline
Rule 7     statement_with_newline -> statement separator
Rule 8     statement_with_newline -> statement
Rule 9     separator -> separator NEWLINE
Rule 10    separator -> NEWLINE
Rule 11    opt_separator -> separator
Rule 12    opt_separator -> <empty>
Rule 13    statement -> class_definition
Rule 14    statement -> create_statement
Rule 15    statement -> set_statement
Rule 16    statement -> attach_statement
Rule 17    statement -> repeat_statement
Rule 18    statement -> repeat_through_statement
Rule 19    statement -> until_statement
Rule 20    statement -> if_statement
Rule 21    statement -> ask_statement
Rule 22    statement -> say_statement
Rule 23    statement -> call_statement
Rule 24    statement -> knows_statement
Rule 25    statement -> forgets_statement
Rule 26    statement -> whenever_statement
Rule 27    statement -> remove_statement
Rule 28    statement -> announce_statement
Rule 29    statement -> world_remembers
Rule 30    statement -> world_forgets
Rule 31    statement -> save_world
Rule 32    statement -> restore_world
Rule 33    class_definition -> CLASS IDENTIFIER opt_separator class_body opt_separator END CLASS
Rule 34    class_definition -> CLASS IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CLASS
Rule 35    class_definition -> CREATURE IDENTIFIER opt_separator class_body opt_separator END CREATURE
Rule 36    class_definition -> CREATURE IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CREATURE
Rule 37    class_body -> class_body separator class_member
Rule 38    class_body -> class_member
Rule 39    class_member -> constructor
Rule 40    class_member -> method
Rule 41    constructor -> CREATE WITH LPAREN parameters RPAREN opt_separator statements opt_separator END CREATE
Rule 42    constructor -> WHEN BORN WITH LPAREN parameters RPAREN opt_separator statements opt_separator END BORN
Rule 43    constructor -> WHEN BORN opt_separator statements opt_separator END BORN
Rule 44    method -> METHOD IDENTIFIER opt_separator statements opt_separator END METHOD
Rule 45    method -> ACTION action_name opt_separator statements opt_separator END ACTION
Rule 46    action_name -> IDENTIFIER
Rule 47    action_name -> action_name IDENTIFIER
Rule 48    parameters -> parameters IDENTIFIER
Rule 49    parameters -> IDENTIFIER
Rule 50    attribute_path -> IDENTIFIER
Rule 51    attribute_path -> attribute_path IDENTIFIER
Rule 52    create_statement -> CREATE IDENTIFIER IDENTIFIER WITH expression
Rule 53    create_statement -> CREATE IDENTIFIER IDENTIFIER
Rule 54    create_statement -> BRING IDENTIFIER TO LIFE AS IDENTIFIER WITH expression
Rule 55    create_statement -> BRING IDENTIFIER TO LIFE AS IDENTIFIER
Rule 56    set_statement -> SET attribute_path TO expression
Rule 57    set_statement -> GIVE attribute_path IDENTIFIER TRAIT IDENTIFIER TO expression
Rule 58    set_statement -> GIVE attribute_path TRAIT IDENTIFIER TO expression
Rule 59    attach_statement -> ATTACH expression TO expression
Rule 60    repeat_statement -> REPEAT expression TIMES opt_separator statements opt_separator END REPEAT
Rule 61    repeat_through_statement -> REPEAT THROUGH expression AS attribute_path opt_separator statements opt_separator END REPEAT
Rule 62    until_statement -> UNTIL condition opt_separator statements opt_separator END UNTIL
Rule 63    if_statement -> IF condition opt_separator statements opt_separator ELSE opt_separator statements opt_separator END IF
Rule 64    if_statement -> IF condition opt_separator statements opt_separator END IF
Rule 65    if_statement -> WHEN condition opt_separator statements opt_separator OTHERWISE opt_separator statements opt_separator END WHEN
Rule 66    if_statement -> WHEN condition opt_separator statements opt_separator END WHEN
Rule 67    ask_statement -> ASK STRING
Rule 68    say_statement -> SAY expression
Rule 69    call_statement -> CALL attribute_path
Rule 70    call_statement -> expression DOES action_name
Rule 71    knows_statement -> expression KNOWS expression
Rule 72    knows_statement -> expression KNOWS expression AS IDENTIFIER
Rule 73    forgets_statement -> expression FORGETS IDENTIFIER
Rule 74    whenever_statement -> WHENEVER subject DOES action_name opt_separator statements opt_separator END WHENEVER
Rule 75    whenever_statement -> WHENEVER subject GETS TRAIT IDENTIFIER CHANGED opt_separator statements opt_separator END WHENEVER
Rule 76    whenever_statement -> WHENEVER subject IDENTIFIER BORN opt_separator statements opt_separator END WHENEVER
Rule 77    whenever_statement -> WHENEVER subject IDENTIFIER opt_separator statements opt_separator END WHENEVER
Rule 78    subject -> IDENTIFIER
Rule 79    subject -> ANYONE
Rule 80    remove_statement -> REMOVE IDENTIFIER FROM WORLD
Rule 81    announce_statement -> ANNOUNCE expression
Rule 82    world_remembers -> THE_WORLD REMEMBERS fact_name AS expression
Rule 83    world_forgets -> THE_WORLD FORGETS fact_name
Rule 84    save_world -> SAVE THE_WORLD TO expression
Rule 85    restore_world -> RESTORE THE_WORLD FROM expression
Rule 86    condition -> expression comparison_op expression
Rule 87    condition -> expression KNOWS expression
Rule 88    condition -> expression KNOWS expression AS IDENTIFIER
Rule 89    condition -> expression KNOWS ANYONE AS IDENTIFIER
Rule 90    comparison_op -> GT
Rule 91    comparison_op -> LT
Rule 92    comparison_op -> EQ
Rule 93    comparison_op -> NEQ
Rule 94    expression_list -> expression_list expression
Rule 95    expression_list -> expression
Rule 96    expression -> STRING
Rule 97    expression -> NUMBER
Rule 98    expression -> attribute_path
Rule 99    expression -> expression PLUS expression
Rule 100   expression -> expression MINUS expression
Rule 101   expression -> LPAREN expression_list RPAREN
Rule 102   expression -> world_expr
Rule 103   world_expr -> THE_WORLD KNOWS fact_name
Rule 104   world_expr -> THE_WORLDS IDENTIFIER CREATURES
Rule 105   world_expr -> THE_WORLD COUNTS IDENTIFIER
Rule 106   fact_name -> IDENTIFIER
Rule 107   fact_name -> fact_name IDENTIFIER

Terminals, with rules where they appear

ACTION               : 45 45
ANNOUNCE             : 81
ANYONE               : 79 89
AS                   : 54 55 61 72 82 88 89
ASK                  : 67
ATTACH               : 59
BORN                 : 42 42 43 43 76
BRING                : 54 55
CALL                 : 69
CHANGED              : 75
CLASS                : 33 33 34 34
COUNTS               : 105
CREATE               : 41 41 52 53
CREATURE             : 35 35 36 36
CREATURES            : 104
DOES                 : 70 74
ELSE                 : 63
END                  : 33 34 35 36 41 42 43 44 45 60 61 62 63 64 65 66 74 75 76 77
EQ                   : 92
FORGETS              : 73 83
FROM                 : 34 36 80 85
GETS                 : 75
GIVE                 : 57 58
GT                   : 90
IDENTIFIER           : 33 34 34 35 36 36 44 46 47 48 49 50 51 52 52 53 53 54 54 55 55 57 57 58 72 73 75 76 77 78 80 88 89 104 105 106 107
IF                   : 63 63 64 64
KNOWS                : 71 72 87 88 89 103
LIFE                 : 54 55
LPAREN               : 41 42 101
LT                   : 91
METHOD               : 44 44
MINUS                : 100
NEQ                  : 93
NEWLINE              : 3 9 10
NUMBER               : 97
OTHERWISE            : 65
PLUS                 : 99
REMEMBERS            : 82
REMOVE               : 80
REPEAT               : 60 60 61 61
RESTORE              : 85
RPAREN               : 41 42 101
SAVE                 : 84
SAY                  : 68
SET                  : 56
STRING               : 67 96
THE_WORLD            : 82 83 84 85 103 105
THE_WORLDS           : 104
THROUGH              : 61
TIMES                : 60
TO                   : 54 55 56 57 58 59 84
TRAIT                : 57 58 75
UNTIL                : 62 62
WHEN                 : 42 43 65 65 66 66
WHENEVER             : 74 74 75 75 76 76 77 77
WITH                 : 41 42 52 54
WORLD                : 80
error                : 

Nonterminals, with rules where they appear

action_name          : 45 47 70 74
announce_statement   : 28
ask_statement        : 21
attach_statement     : 16
attribute_path       : 51 56 57 58 61 69 98
call_statement       : 23
class_body           : 33 34 35 36 37
class_definition     : 13
class_member         : 37 38
comparison_op        : 86
condition            : 62 63 64 65 66
constructor          : 39
create_statement     : 14
expression           : 52 54 56 57 58 59 59 60 61 68 70 71 71 72 72 73 81 82 84 85 86 86 87 87 88 88 89 94 95 99 99 100 100
expression_list      : 94 101
fact_name            : 82 83 103 107
forgets_statement    : 25
if_statement         : 20
knows_statement      : 24
method               : 40
opt_newlines         : 1 2 3
opt_separator        : 33 33 34 34 35 35 36 36 41 41 42 42 43 43 44 44 45 45 60 60 61 61 62 62 63 63 63 63 64 64 65 65 65 65 66 66 74 74 75 75 76 76 77 77
parameters           : 41 42 48
program              : 0
remove_statement     : 27
repeat_statement     : 17
repeat_through_statement : 18
restore_world        : 32
save_world           : 31
say_statement        : 22
separator            : 7 9 11 37
set_statement        : 15
statement            : 7 8
statement_with_newline : 5 6
statements           : 1 5 41 42 43 44 45 60 61 62 63 63 64 65 65 66 74 75 76 77
subject              : 74 75 76 77
until_statement      : 19
whenever_statement   : 26
world_expr           : 102
world_forgets        : 30
world_remembers      : 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . opt_newlines statements
    (2) program -> . opt_newlines
    (3) opt_newlines -> . opt_newlines NEWLINE
    (4) opt_newlines -> .

    NEWLINE         reduce using rule 4 (opt_newlines -> .)
    CLASS           reduce using rule 4 (opt_newlines -> .)
    CREATURE        reduce using rule 4 (opt_newlines -> .)
    CREATE          reduce using rule 4 (opt_newlines -> .)
    BRING           reduce using rule 4 (opt_newlines -> .)
    SET             reduce using rule 4 (opt_newlines -> .)
    GIVE            reduce using rule 4 (opt_newlines -> .)
    ATTACH          reduce using rule 4 (opt_newlines -> .)
    REPEAT          reduce using rule 4 (opt_newlines -> .)
    UNTIL           reduce using rule 4 (opt_newlines -> .)
    IF              reduce using rule 4 (opt_newlines -> .)
    WHEN            reduce using rule 4 (opt_newlines -> .)
    ASK             reduce using rule 4 (opt_newlines -> .)
    SAY             reduce using rule 4 (opt_newlines -> .)
    CALL            reduce using rule 4 (opt_newlines -> .)
    WHENEVER        reduce using rule 4 (opt_newlines -> .)
    REMOVE          reduce using rule 4 (opt_newlines -> .)
    ANNOUNCE        reduce using rule 4 (opt_newlines -> .)
    THE_WORLD       reduce using rule 4 (opt_newlines -> .)
    SAVE            reduce using rule 4 (opt_newlines -> .)
    RESTORE         reduce using rule 4 (opt_newlines -> .)
    STRING          reduce using rule 4 (opt_newlines -> .)
    NUMBER          reduce using rule 4 (opt_newlines -> .)
    LPAREN          reduce using rule 4 (opt_newlines -> .)
    IDENTIFIER      reduce using rule 4 (opt_newlines -> .)
    THE_WORLDS      reduce using rule 4 (opt_newlines -> .)
    $end            reduce using rule 4 (opt_newlines -> .)

    program                        shift and go to state 1
    opt_newlines                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> opt_newlines . statements
    (2) program -> opt_newlines .
    (3) opt_newlines -> opt_newlines . NEWLINE
    (5) statements -> . statements statement_with_newline
    (6) statements -> . statement_with_newline
    (7) statement_with_newline -> . statement separator
    (8) statement_with_newline -> . statement
    (13) statement -> . class_definition
    (14) statement -> . create_statement
    (15) statement -> . set_statement
    (16) statement -> . attach_statement
    (17) statement -> . repeat_statement
    (18) statement -> . repeat_through_statement
    (19) statement -> . until_statement
    (20) statement -> . if_statement
    (21) statement -> . ask_statement
    (22) statement -> . say_statement
    (23) statement -> . call_statement
    (24) statement -> . knows_statement
    (25) statement -> . forgets_statement
    (26) statement -> . whenever_statement
    (27) statement -> . remove_statement
    (28) statement -> . announce_statement
    (29) statement -> . world_remembers
    (30) statement -> . world_forgets
    (31) statement -> . save_world
    (32) statement -> . restore_world
    (33) class_definition -> . CLASS IDENTIFIER opt_separator class_body opt_separator END CLASS
    (34) class_definition -> . CLASS IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CLASS
    (35) class_definition -> . CREATURE IDENTIFIER opt_separator class_body opt_separator END CREATURE
    (36) class_definition -> . CREATURE IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CREATURE
    (52) create_statement -> . CREATE IDENTIFIER IDENTIFIER WITH expression
    (53) create_statement -> . CREATE IDENTIFIER IDENTIFIER
    (54) create_statement -> . BRING IDENTIFIER TO LIFE AS IDENTIFIER WITH expression
    (55) create_statement -> . BRING IDENTIFIER TO LIFE AS IDENTIFIER
    (56) set_statement -> . SET attribute_path TO expression
    (57) set_statement -> . GIVE attribute_path IDENTIFIER TRAIT IDENTIFIER TO expression
    (58) set_statement -> . GIVE attribute_path TRAIT IDENTIFIER TO expression
    (59) attach_statement -> . ATTACH expression TO expression
    (60) repeat_statement -> . REPEAT expression TIMES opt_separator statements opt_separator END REPEAT
    (61) repeat_through_statement -> . REPEAT THROUGH expression AS attribute_path opt_separator statements opt_separator END REPEAT
    (62) until_statement -> . UNTIL condition opt_separator statements opt_separator END UNTIL
    (63) if_statement -> . IF condition opt_separator statements opt_separator ELSE opt_separator statements opt_separator END IF
    (64) if_statement -> . IF condition opt_separator statements opt_separator END IF
    (65) if_statement -> . WHEN condition opt_separator statements opt_separator OTHERWISE opt_separator statements opt_separator END WHEN
    (66) if_statement -> . WHEN condition opt_separator statements opt_separator END WHEN
    (67) ask_statement -> . ASK STRING
    (68) say_statement -> . SAY expression
    (69) call_statement -> . CALL attribute_path
    (70) call_statement -> . expression DOES action_name
    (71) knows_statement -> . expression KNOWS expression
    (72) knows_statement -> . expression KNOWS expression AS IDENTIFIER
    (73) forgets_statement -> . expression FORGETS IDENTIFIER
    (74) whenever_statement -> . WHENEVER subject DOES action_name opt_separator statements opt_separator END WHENEVER
    (75) whenever_statement -> . WHENEVER subject GETS TRAIT IDENTIFIER CHANGED opt_separator statements opt_separator END WHENEVER
    (76) whenever_statement -> . WHENEVER subject IDENTIFIER BORN opt_separator statements opt_separator END WHENEVER
    (77) whenever_statement -> . WHENEVER subject IDENTIFIER opt_separator statements opt_separator END WHENEVER
    (80) remove_statement -> . REMOVE IDENTIFIER FROM WORLD
    (81) announce_statement -> . ANNOUNCE expression
    (82) world_remembers -> . THE_WORLD REMEMBERS fact_name AS expression
    (83) world_forgets -> . THE_WORLD FORGETS fact_name
    (84) save_world -> . SAVE THE_WORLD TO expression
    (85) restore_world -> . RESTORE THE_WORLD FROM expression
    (96) expression -> . STRING
    (97) expression -> . NUMBER
    (98) expression -> . attribute_path
    (99) expression -> . expression PLUS expression
    (100) expression -> . expression MINUS expression
    (101) expression -> . LPAREN expression_list RPAREN
    (102) expression -> . world_expr
    (50) attribute_path -> . IDENTIFIER
    (51) attribute_path -> . attribute_path IDENTIFIER
    (103) world_expr -> . THE_WORLD KNOWS fact_name
    (104) world_expr -> . THE_WORLDS IDENTIFIER CREATURES
    (105) world_expr -> . THE_WORLD COUNTS IDENTIFIER

    $end            reduce using rule 2 (program -> opt_newlines .)
    NEWLINE         shift and go to state 4
    CLASS           shift and go to state 27
    CREATURE        shift and go to state 29
    CREATE          shift and go to state 30
    BRING           shift and go to state 32
    SET             shift and go to state 33
    GIVE            shift and go to state 35
    ATTACH          shift and go to state 36
    REPEAT          shift and go to state 37
    UNTIL           shift and go to state 38
    IF              shift and go to state 39
    WHEN            shift and go to state 40
    ASK             shift and go to state 41
    SAY             shift and go to state 43
    CALL            shift and go to state 44
    WHENEVER        shift and go to state 45
    REMOVE          shift and go to state 46
    ANNOUNCE        shift and go to state 47
    THE_WORLD       shift and go to state 48
    SAVE            shift and go to state 49
    RESTORE         shift and go to state 50
    STRING          shift and go to state 42
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 52
    IDENTIFIER      shift and go to state 28
    THE_WORLDS      shift and go to state 54

    statements                     shift and go to state 3
    statement_with_newline         shift and go to state 5
    statement                      shift and go to state 6
    class_definition               shift and go to state 7
    create_statement               shift and go to state 8
    set_statement                  shift and go to state 9
    attach_statement               shift and go to state 10
    repeat_statement               shift and go to state 11
    repeat_through_statement       shift and go to state 12
    until_statement                shift and go to state 13
    if_statement                   shift and go to state 14
    ask_statement                  shift and go to state 15
    say_statement                  shift and go to state 16
    call_statement                 shift and go to state 17
    knows_statement                shift and go to state 18
    forgets_statement              shift and go to state 19
    whenever_statement             shift and go to state 20
    remove_statement               shift and go to state 21
    announce_statement             shift and go to state 22
    world_remembers                shift and go to state 23
    world_forgets                  shift and go to state 24
    save_world                     shift and go to state 25
    restore_world                  shift and go to state 26
    expression                     shift and go to state 31
    attribute_path                 shift and go to state 34
    world_expr                     shift and go to state 53

state 3

    (1) program -> opt_newlines statements .
    (5) statements -> statements . statement_with_newline
    (7) statement_with_newline -> . statement separator
    (8) statement_with_newline -> . statement
    (13) statement -> . class_definition
    (14) statement -> . create_statement
    (15) statement -> . set_statement
    (16) statement -> . attach_statement
    (17) statement -> . repeat_statement
    (18) statement -> . repeat_through_statement
    (19) statement -> . until_statement
    (20) statement -> . if_statement
    (21) statement -> . ask_statement
    (22) statement -> . say_statement
    (23) statement -> . call_statement
    (24) statement -> . knows_statement
    (25) statement -> . forgets_statement
    (26) statement -> . whenever_statement
    (27) statement -> . remove_statement
    (28) statement -> . announce_statement
    (29) statement -> . world_remembers
    (30) statement -> . world_forgets
    (31) statement -> . save_world
    (32) statement -> . restore_world
    (33) class_definition -> . CLASS IDENTIFIER opt_separator class_body opt_separator END CLASS
    (34) class_definition -> . CLASS IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CLASS
    (35) class_definition -> . CREATURE IDENTIFIER opt_separator class_body opt_separator END CREATURE
    (36) class_definition -> . CREATURE IDENTIFIER FROM IDENTIFIER opt_separator class_body opt_separator END CREATURE
    (52) create_statement -> . CREATE IDENTIFIER IDENTIFIER WITH expression
    (53) create_statement -> . CREATE IDENTIFIER IDENTIFIER
    (54) create_statement -> . BRING IDENTIFIER TO LIFE AS IDENTIFIER WITH expression
    (55) create_statement -> . BRING IDENTIFIER TO LIFE AS IDENTIFIER
    (56) set_statement -> . SET attribute_path TO expression
    (57) set_statement -> . GIVE attribute_path IDENTIFIER TRAIT IDENTIFIER TO expression
    (58) set_statement -> . GIVE attribute_path TRAIT IDENTIFIER TO expression
    (59) attach_statement -> . ATTACH expression TO expression
    (60) repeat_statement -> . REPEAT expression TIMES opt_separator statements opt_separator END REPEAT
    (61) repeat_through_statement -> . REPEAT THROUGH expression AS attribute_path opt_separator statements opt_separator END REPEAT
    (62) until_statement -> . UNTIL condition opt_separator statements opt_separator END UNTIL
    (63) if_statement -> . IF condition opt_separator statements opt_separator ELSE opt_separator statements opt_separator END IF
    (64) if_statement -> . IF condition opt_separator statements opt_separator END IF
    (65) if_statement -> . WHEN condition opt_separator statements opt_separator OTHERWISE opt_separator statements opt_separator END WHEN
    (66) if_statement -> . WHEN condition opt_separator statements opt_separator END WHEN
    (67) ask_statement -> . ASK STRING
    (68) say_statement -> . SAY expression
    (69) call_statement -> . CALL attribute_path
    (70) call_statement -> . expression DOES action_name
    (71) knows_statement -> . expression KNOWS expression
    (72) knows_statement -> . expression KNOWS expression AS IDENTIFIER
    (73) forgets_statement -> . expression FORGETS IDENTIFIER
    (74) whenever_statement -> . WHENEVER subject DOES action_name opt_separator statements opt_separator END WHENEVER
    (75) whenever_statement -> . WHENEVER subject GETS TRAIT IDENTIFIER CHANGED opt_separator statements opt_separator END WHENEVER
    (76) whenever_statement -> . WHENEVER subject IDENTIFIER BORN opt_separator statements opt_separator END WHENEVER
    (77) whenever_statement -> . WHENEVER subject IDENTIFIER opt_separator statements opt_separator END WHENEVER
    (80) remove_statement -> . REMOVE IDENTIFIER FROM WORLD
    (81) announce_statement -> . ANNOUNCE expression
    (82) world_remembers -> . THE_WORLD REMEMBERS fact_name AS expression
    (83) world_forgets -> . THE_WORLD FORGETS fact_name
    (84) save_world -> . SAVE THE_WORLD TO expression
    (85) restore_world -> . RESTORE THE_WORLD FROM expression
    (96) expression -> . STRING
    (97) expression -> . NUMBER
    (98) expression -> . attribute_path
    (99) expression -> . expression PLUS expression
    (100) expression -> . expression MINUS expression
    (101) expression -> . LPAREN expression_list RPAREN
    (102) expression -> . world_expr
    (50) attribute_path -> . IDENTIFIER
    (51) attribute_path -> . attribute_path IDENTIFIER
    (103) world_expr -> . THE_WORLD KNOWS fact_name
    (104) world_expr -> . THE_WORLDS IDENTIFIER CREATURES
    (105) world_expr -> . THE_WORLD COUNTS IDENTIFIER

    $end            reduce using rule 1 (program -> opt_newlines statements .)
    CLASS           shift and go to state 27
    CREATURE        shift and go to state 29
    CREATE          shift and go to state 30
    BRING           shift and go to state 32
    SET             shift and go to state 33
    GIVE            shift and go to state 35
    ATTACH          shift and go to state 36
    REPEAT          shift and go to state 37
    UNTIL           shift and go to state 38
    IF              shift and go to state 39
    WHEN            shift and go to state 40
    ASK             shift and go to state 41
    SAY             shift and go to state 43
    CALL            shift and go to state 44
    WHENEVER        shift and go to state 45
    REMOVE          shift and go to state 46
    ANNOUNCE        shift and go to state 47
    THE_WORLD       shift and go to state 48
    SAVE            shift and go to state 49
    RESTORE         shift and go to state 50
    STRING          shift and go to state 42
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 52
    IDENTIFIER      shift and go to state 28
    THE_WORLDS      shift and go to state 54

    statement_with_newline         shift and go to state 55
    statement                      shift and go to state 6
    class_definition               shift and go to state 7
    create_statement               shift and go to state 8
    set_statement                  shift and go to state 9
    attach_statement               shift and go to state 10
    repeat_statement               shift and go to state 11
    repeat_through_statement       shift and go to state 12
    until_statement                shift and go to state 13
    if_statement                   shift and go to state 14
    ask_statement                  shift and go to state 15
    say_statement                  shift and go to state 16
    call_statement                 shift and go to state 17
    knows_statement                shift and go to state 18
    forgets_statement              shift and go to state 19
    whenever_statement             shift and go to state 20
    remove_statement               shift and go to state 21
    announce_statement             shift and go to state 22
    world_remembers                shift and go to state 23
    world_forgets                  shift and go to state 24
    save_world                     shift and go to state 25
    restore_world                  shift and go to state 26
    expression                     shift and go to state 31
    attribute_path                 shift and go to state 34
    world_expr                     shift and go to state 53

state 4

    (3) opt_newlines -> opt_newlines NEWLINE .

    NEWLINE         reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    CLASS           reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    CREATURE        reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    CREATE          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    BRING           reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    SET             reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    GIVE            reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    ATTACH          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    REPEAT          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    UNTIL           reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    IF              reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    WHEN            reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    ASK             reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    SAY             reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    CALL            reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    WHENEVER        reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    REMOVE          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    ANNOUNCE        reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    THE_WORLD       reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    SAVE            reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    RESTORE         reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    STRING          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    NUMBER          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    LPAREN          reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    IDENTIFIER      reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    THE_WORLDS      reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)
    $end            reduce using rule 3 (opt_newlines -> opt_newlines NEWLINE .)


state 5

    (6) statements -> statement_with_newline .

    CLASS           reduce using rule 6 (statements -> statement_with_newline .)
    CREATURE        reduce using rule 6 (statements -> statement_with_newline .)
    CREATE          reduce using rule 6 (statements -> statement_with_newline .)
    BRING           reduce using rule 6 (statements -> statement_with_newline .)
    SET             reduce using rule 6 (statements -> statement_with_newline .)
    GIVE            reduce using rule 6 (statements -> statement_with_newline .)
    ATTACH          reduce using rule 6 (statements -> statement_with_newline .)
    REPEAT          reduce using rule 6 (statements -> statement_with_newline .)
    UNTIL           reduce using rule 6 (statements -> statement_with_newline .)
    IF              reduce using rule 6 (statements -> statement_with_newline .)
    WHEN            reduce using rule 6 (statements -> statement_with_newline .)
    ASK             reduce using rule 6 (statements -> statement_with_newline .)
    SAY             reduce using rule 6 (statements -> statement_with_newline .)
    CALL            reduce using rule 6 (statements -> statement_with_newline .)
    WHENEVER        reduce using rule 6 (statements -> statement_with_newline .)
    REMOVE          reduce using rule 6 (statements -> statement_with_newline .)
    ANNOUNCE        reduce using rule 6 (statements -> statement_with_newline .)
    THE_WORLD       reduce using rule 6 (statements -> statement_with_newline .)
    SAVE            reduce using rule 6 (statements -> statement_with_newline .)
    RESTORE         reduce using rule 6 (statements -> statement_with_newline .)
    STRING          reduce using rule 6 (statements -> statement_with_newline .)
    NUMBER          reduce using rule 6 (statements -> statement_with_newline .)
    LPAREN          reduce using rule 6 (statements -> statement_with_newline .)
    IDENTIFIER      reduce using rule 6 (statements -> statement_with_newline .)
    THE_WORLDS      reduce using rule 6 (statements -> statement_with_newline .)
    $end            reduce using rule 6 (statements -> statement_with_newline .)
    NEWLINE         reduce using rule 6 (statements -> statement_with_newline .)
    END             reduce using rule 6 (statements -> statement_with_newline .)
    ELSE            reduce using rule 6 (statements -> statement_with_newline .)
    OTHERWISE       reduce using rule 6 (statements -> statement_with_newline .)


state 6

    (7) statement_with_newline -> statement . separator
    (8) statement_with_newline -> statement .
    (9) separator -> . separator NEWLINE
    (10) separator -> . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    CLASS           reduce using rule 8 (statement_with_newline -> statement .)
    CREATURE        reduce using rule 8 (statement_with_newline -> statement .)
    CREATE          reduce using rule 8 (statement_with_newline -> statement .)
    BRING           reduce using rule 8 (statement_with_newline -> statement .)
    SET             reduce using rule 8 (statement_with_newline -> statement .)
    GIVE            reduce using rule 8 (statement_with_newline -> statement .)
    ATTACH          reduce using rule 8 (statement_with_newline -> statement .)
    REPEAT          reduce using rule 8 (statement_with_newline -> statement .)
    UNTIL           reduce using rule 8 (statement_with_newline -> statement .)
    IF              reduce using rule 8 (statement_with_newline -> statement .)
    WHEN            reduce using rule 8 (statement_with_newline -> statement .)
    ASK             reduce using rule 8 (statement_with_newline -> statement .)
    SAY             reduce using rule 8 (statement_with_newline -> statement .)
    CALL            reduce using rule 8 (statement_with_newline -> statement .)
    WHENEVER        reduce using rule 8 (statement_with_newline -> statement .)
    REMOVE          reduce using rule 8 (statement_with_newline -> statement .)
    ANNOUNCE        reduce using rule 8 (statement_with_newline -> statement .)
    THE_WORLD       reduce using rule 8 (statement_with_newline -> statement .)
    SAVE            reduce using rule 8 (statement_with_newline -> statement .)
    RESTORE         reduce using rule 8 (statement_with_newline -> statement .)
    STRING          reduce using rule 8 (statement_with_newline -> statement .)
    NUMBER          reduce using rule 8 (statement_with_newline -> statement .)
    LPAREN          reduce using rule 8 (statement_with_newline -> statement .)
    IDENTIFIER      reduce using rule 8 (statement_with_newline -> statement .)
    THE_WORLDS      reduce using rule 8 (statement_with_newline -> statement .)
    $end            reduce using rule 8 (statement_with_newline -> statement .)
    END             reduce using rule 8 (statement_with_newline -> statement .)
    ELSE            reduce using rule 8 (statement_with_newline -> statement .)
    OTHERWISE       reduce using rule 8 (statement_with_newline -> statement .)
    NEWLINE         shift and go to state 57

  ! NEWLINE         [ reduce using rule 8 (statement_with_newline -> statement .) ]

    separator                      shift and go to state 56

state 7

    (13) statement -> class_definition .

    NEWLINE         reduce using rule 13 (statement -> class_definition .)
    CLASS           reduce using rule 13 (statement -> class_definition .)
    CREATURE        reduce using rule 13 (statement -> class_definition .)
    CREATE          reduce using rule 13 (statement -> class_definition .)
    BRING           reduce using rule 13 (statement -> class_definition .)
    SET             reduce using rule 13 (statement -> class_definition .)
    GIVE            reduce using rule 13 (statement -> class_definition .)
    ATTACH          reduce using rule 13 (statement -> class_definition .)
    REPEAT          reduce using rule 13 (statement -> class_definition .)
    UNTIL           reduce using rule 13 (statement -> class_definition .)
    IF              reduce using rule 13 (statement -> class_definition .)
    WHEN            reduce using rule 13 (statement -> class_definition .)
    ASK             reduce using rule 13 (statement -> class_definition .)
    SAY             reduce using rule 13 (statement -> class_definition .)
    CALL            reduce using rule 13 (statement -> class_definition .)
    WHENEVER        reduce using rule 13 (statement -> class_definition .)
    REMOVE          reduce using rule 13 (statement -> class_definition .)
    ANNOUNCE        reduce using rule 13 (statement -> class_definition .)
    THE_WORLD       reduce using rule 13 (statement -> class_definition .)
    SAVE            reduce using rule 13 (statement -> class_definition .)
    RESTORE         reduce using rule 13 (statement -> class_definition .)
    STRING          reduce using rule 13 (statement -> class_definition .)
    NUMBER          reduce using rule 13 (statement -> class_definition .)
    LPAREN          reduce using rule 13 (statement -> class_definition .)
    IDENTIFIER      reduce using rule 13 (statement -> class_definition .)
    THE_WORLDS      reduce using rule 13 (statement -> class_definition .)
    $end            reduce using rule 13 (statement -> class_definition .)
    END             reduce using rule 13 (statement -> class_definition .)
    ELSE            reduce using rule 13 (statement -> class_definition .)
    OTHERWISE       reduce using rule 13 (statement -> class_definition .)


state 8

    (14) statement -> create_statement .
